Misc style cleanups in l3fp
The only change that may affect (a tiny number of) users
is that the overflow trap for exp(large number) now
receives infinity/zero instead of an arbitrary large/small
number.

--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -138,6 +138,10 @@
 %   testing code even if it relies on other packages: load all other
 %   packages, call \cs{deprecation_error:}, and load the code that one is
 %   interested in testing.
+%
+%   One of the deprecated syntaxes is within floating point expressions;
+%   to keep related code in the same place we define in \pkg{l3fp-parse}
+%   a version of \cs{__fp_parse_round:Nw} producing an error.
 %    \begin{macrocode}
 \cs_new_protected:Npn \deprecation_error:
   {
@@ -147,6 +151,7 @@
     \@@_error:Nnn \c_minus_one { - 1 } { 2018-12-31 }
     \@@_error:Nnn \sort_ordered: { \sort_return_same: } { 2018-12-31 }
     \@@_error:Nnn \sort_reversed: { \sort_return_swapped: } { 2018-12-31 }
+    \cs_set_eq:NN \__fp_parse_round:Nw \__fp_parse_round_deprecation_error:Nw
     \cs_set_eq:NN \deprecation_error: \scan_stop:
   }
 %    \end{macrocode}
