--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -728,19 +728,17 @@
 %
 % We support four types of floating point numbers:
 % \begin{itemize}
-%   \item $\pm 0.d_1d_2\ldots{}d_{16} \cdot 10^{n}$, a normal floating
-%     point number, with $d_i\in [0,9]$, $d_1\neq 0$, and $\lvert n\rvert
-%     \leq \ExplSyntaxOn \int_use:N \c__fp_max_exponent_int$;
+%   \item $\pm m \cdot 10^{n}$, a floating
+%     point number, with integer $1\leq m\leq 10^{16}$, and
+%     $-{\ExplSyntaxOn\int_use:N\c__fp_minus_min_exponent_int}\leq
+%     n\leq {\ExplSyntaxOn\int_use:N\c__fp_max_exponent_int}$;
 %   \item $\pm 0$, zero, with a given sign;
 %   \item $\pm \infty$, infinity, with a given sign;
 %   \item \nan{}, is \enquote{not a number}, and can be either quiet
 %     or signalling (\emph{not yet}: this distinction is currently
 %     unsupported);
-%   \item [\emph{(not yet)}] subnormal numbers $\pm 0.d_1d_2\ldots{}d_{16}
-%     \cdot 10^{-\ExplSyntaxOn\int_use:N \c__fp_max_exponent_int}$ with
-%     $d_1=0$.
 % \end{itemize}
-% Normal floating point numbers are stored in base $10$, with $16$
+% Normal floating point numbers are stored in base $10$, with up to $16$
 % significant figures.
 %
 % On input, a normal floating point number consists of:
@@ -1322,7 +1320,7 @@
 % \pkg{Pgfmath} also provides box-measurements (depth, height, width), but
 % boxes are not possible expandably.
 %
-% Bugs. (Exclamation points mark important bugs.)
+% Bugs.
 % \begin{itemize}
 %   \item Check that functions are monotonic when they should.
 %   \item Add exceptions to |?:|, |!<=>?|, |&&|, \verb"||", and |!|.
@@ -1334,8 +1332,6 @@
 %   \item \texttt{0e9999999999} gives a \TeX{} \enquote{number too
 %       large} error.
 %   \item Subnormals are not implemented.
-%   \item The overflow trap receives the wrong argument in
-%     \pkg{l3fp-expo} (see |exp(1e5678)| in \file{m3fp-traps001}).
 % \end{itemize}
 %
 % Possible optimizations/improvements.
@@ -1370,8 +1366,7 @@
 %     \TeX{} fp packages, the international standards,\ldots{}
 %   \item Also take into account the \enquote{inexact} exception?
 %   \item Support multi-character prefix operators (\emph{e.g.}, |@/| or
-%     whatever)?  Perhaps for including comments inside the computation
-%     itself??
+%     whatever)?
 % \end{itemize}
 %
 % \end{documentation}
