--- a/l3trial/l3fp-extras/l3fp-types.dtx
+++ b/l3trial/l3fp-extras/l3fp-types.dtx
@@ -154,22 +154,30 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[aux, EXP]{\@@_parse_unary_function:nNN}
+% \begin{macro}[aux, EXP]{\@@_parse_unary_function:NNN, \@@_parse_unary_aux:w}
 %   This implements functions which expect one argument (|sin|, |ln|,
 %   \ldots{}).  Call the appropriate
 %   |\__fp_|\meta{function}\meta{type}|_o:w| depending on the
 %   \meta{type} of the operand.
 %    \begin{macrocode}
-\cs_undefine:N \@@_parse_unary_function:nNN
-\cs_new:Npn \@@_parse_unary_function:nNN #1#2#3
+\cs_undefine:N \@@_parse_unary_function:NNN
+\cs_new:Npn \@@_parse_unary_function:NNN #1#2#3
   {
     \exp_after:wN \@@_parse_apply_unary:NNNwN
     \exp_after:wN #3
     \exp_after:wN #2
-    \cs:w @@_ #1 \exp_after:wN \@@_parse_unary_type:N
+    \cs:w @@_
+      \exp_after:wN \@@_parse_unary_aux:w \token_to_str:N #1
+      \exp_after:wN \@@_parse_unary_type:N
     \exp:w
     \@@_parse_operand:Nw \c_@@_prec_func_int \@@_parse_expand:w
   }
+\use:x
+  {
+    \exp_not:n { \cs_new:Npn \@@_parse_unary_aux:w #1 }
+    \tl_to_str:n { @@_ } \exp_not:n {#2} \tl_to_str:n { _o:w }
+  }
+  {#2}
 %    \end{macrocode}
 % \end{macro}
 %
