--- a/l3kernel/l3fp-assign.dtx
+++ b/l3kernel/l3fp-assign.dtx
@@ -203,7 +203,7 @@
 % \end{variable}
 %
 % \begin{variable}{\c_pi_fp, \c_one_degree_fp}
-%   We simply round $\pi$ to the closest multiple of $10^{-15}$.
+%   We simply round $\pi$ to and $\pi/180$ to $16$ significant digits.
 %    \begin{macrocode}
 \fp_const:Nn \c_pi_fp         { 3.141 5926 5358 9793 }
 \fp_const:Nn \c_one_degree_fp { 0.0 1745 3292 5199 4330 }
