--- a/l3kernel/l3fp-convert.dtx
+++ b/l3kernel/l3fp-convert.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3fp-convert.dtx Copyright(C) 2011-2014,2016 The LaTeX3 Project
+%% File: l3fp-convert.dtx Copyright(C) 2011-2014,2016,2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -135,18 +135,15 @@
     \or:
       \@@_case_use:nw
         {
-          \exp_args:Nf \@@_invalid_operation:nnw
-            {
-              \@@_expand:n
-                { { 1.000000000000000e } \int_use:N \c_@@_max_exponent_int }
-            }
+          \@@_invalid_operation:nnw
+            { \fp_to_scientific:N \c_@@_overflowing_fp }
             { fp_to_scientific }
         }
     \or:
       \@@_case_use:nw
         {
           \@@_invalid_operation:nnw
-            { 0.000000000000000e0 }
+            { \fp_to_scientific:N \c_zero_fp }
             { fp_to_scientific }
         }
     \fi:
@@ -215,10 +212,7 @@
       \@@_case_use:nw
         {
           \@@_invalid_operation:nnw
-            {
-              \exp_after:wN \exp_after:wN \exp_after:wN 1
-              \prg_replicate:nn \c_@@_max_exponent_int 0
-            }
+            { \fp_to_decimal:N \c_@@_overflowing_fp }
             { fp_to_decimal }
         }
     \or:
@@ -338,7 +332,7 @@
 %
 % \begin{macro}[EXP]{\fp_to_dim:N, \fp_to_dim:c, \fp_to_dim:n}
 %   These three public functions rely on \cs{fp_to_decimal:n}
-%   internally.  We make sure to produce |pt| with category other.
+%   internally.
 %    \begin{macrocode}
 \cs_new:Npn \fp_to_dim:N #1
   { \fp_to_decimal:N #1 pt }
@@ -398,7 +392,7 @@
 %   \cs{@@_from_dim_test:ww}, and is combined with the exponent $-4$
 %   of $2^{-16}$.  There is also a need to expand afterwards: this is
 %   performed by \cs{@@_mul_npos_o:Nww}, and cancelled by
-%   \cs{prg_do_nothing:} in \cs{dim_to_fp:n}.
+%   \cs{prg_do_nothing:} here.
 %    \begin{macrocode}
 \cs_new:Npn \dim_to_fp:n #1
   {
