--- a/l3kernel/l3fp-logic.dtx
+++ b/l3kernel/l3fp-logic.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3fp-logic.dtx Copyright (C) 2011-2014,2016 The LaTeX3 Project
+%% File: l3fp-logic.dtx Copyright (C) 2011-2014,2016,2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -61,6 +61,16 @@
 %    \begin{macrocode}
 %<@@=fp>
 %    \end{macrocode}
+%
+% \begin{macro}[aux, EXP]{\@@_parse_word_max:N  , \@@_parse_word_min:N}
+%   Those functions may receive a variable number of arguments.
+%    \begin{macrocode}
+\cs_new:Npn \@@_parse_word_max:N
+  { \@@_parse_function:NNN \@@_minmax_o:Nw 2 }
+\cs_new:Npn \@@_parse_word_min:N
+  { \@@_parse_function:NNN \@@_minmax_o:Nw 0 }
+%    \end{macrocode}
+% \end{macro}
 %
 % \subsection{Syntax of internal functions}
 %
@@ -341,7 +351,7 @@
         \token_if_eq_meaning:NNTF #2 0
           { \__msg_kernel_expandable_error:nnn { kernel } { zero-step } {#6} }
           {
-            \@@_error:nnfn { bad-step } { }
+            \@@_error:nnfn { fp-bad-step } { }
               { \fp_to_tl:n { \s_@@ \@@_chk:w #2#3#4 ; } } {#6}
           }
         \use_none:nnnnn
@@ -352,7 +362,7 @@
   {
     \fp_compare:nNnTF {#2} = {#3}
       {
-        \@@_error:nffn { tiny-step }
+        \@@_error:nffn { fp-tiny-step }
           { \fp_to_tl:n {#3} } { \fp_to_tl:n {#4} } {#6}
       }
       {
@@ -479,26 +489,6 @@
 % \end{macro}
 %
 % \subsection{Boolean operations}
-%
-% \begin{macro}[int, EXP]{\@@_sign_o:w}
-% \begin{macro}[aux, EXP]{\@@_sign_aux_o:w}
-%   Find the sign of the floating point: \texttt{nan}, |+0|, |-0|, |+1| or |-1|.
-%    \begin{macrocode}
-\cs_new:Npn \@@_sign_o:w ? \s_@@ \@@_chk:w #1#2; @
-  {
-    \if_case:w #1 \exp_stop_f:
-           \@@_case_return_same_o:w
-    \or:   \exp_after:wN \@@_sign_aux_o:w
-    \or:   \exp_after:wN \@@_sign_aux_o:w
-    \else: \@@_case_return_same_o:w
-    \fi:
-    \s_@@ \@@_chk:w #1 #2;
-  }
-\cs_new:Npn \@@_sign_aux_o:w \s_@@ \@@_chk:w #1 #2 #3 ;
-  { \@@_exp_after_o:w \s_@@ \@@_chk:w 1#2{1}{1000}{0000}{0000}{0000}; }
-%    \end{macrocode}
-% \end{macro}
-% \end{macro}
 %
 % \begin{macro}[int, EXP]{\@@_not_o:w}
 %   Return \texttt{true} or \texttt{false}, with two expansions, one to
