--- a/l3kernel/l3fp-random.dtx
+++ b/l3kernel/l3fp-random.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3fp-random.dtx Copyright (C) 2016 The LaTeX3 Project
+%% File: l3fp-random.dtx Copyright (C) 2016,2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -61,6 +61,17 @@
 %    \begin{macrocode}
 %<@@=fp>
 %    \end{macrocode}
+%
+% \begin{macro}[aux, EXP]{\@@_parse_word_rand:N , \@@_parse_word_randint:N}
+%   Those functions may receive a variable number of arguments.  We
+%   won't use the argument~|?|.
+%    \begin{macrocode}
+\cs_new:Npn \@@_parse_word_rand:N
+  { \@@_parse_function:NNN \@@_rand_o:Nw ? }
+\cs_new:Npn \@@_parse_word_randint:N
+  { \@@_parse_function:NNN \@@_randint_o:Nw ? }
+%    \end{macrocode}
+% \end{macro}
 %
 % \subsection{Engine support}
 %
