--- a/l3kernel/l3fp-traps.dtx
+++ b/l3kernel/l3fp-traps.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3fp-traps.dtx Copyright (C) 2011-2014,2016 The LaTeX3 Project
+%% File: l3fp-traps.dtx Copyright (C) 2011-2014,2016,2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -166,7 +166,7 @@
       { \cs_set:Npn \@@_invalid_operation:nnw ##1##2##3; }
       {
         #1
-        \@@_error:nnfn { invalid } {##2} { \fp_to_tl:n { ##3; } } { }
+        \@@_error:nnfn { fp-invalid } {##2} { \fp_to_tl:n { ##3; } } { }
         \flag_raise:n { fp_invalid_operation }
         ##1
       }
@@ -174,7 +174,7 @@
       { \cs_set:Npn \@@_invalid_operation_o:Nww ##1##2; ##3; }
       {
         #1
-        \@@_error:nffn { invalid-ii }
+        \@@_error:nffn { fp-invalid-ii }
           { \fp_to_tl:n { ##2; } } { \fp_to_tl:n { ##3; } } {##1}
         \flag_raise:n { fp_invalid_operation }
         \exp_after:wN \c_nan_fp
@@ -183,7 +183,7 @@
       { \cs_set:Npn \@@_invalid_operation_tl_o:ff ##1##2 }
       {
         #1
-        \@@_error:nffn { invalid } {##1} {##2} { }
+        \@@_error:nffn { fp-invalid } {##1} {##2} { }
         \flag_raise:n { fp_invalid_operation }
         \exp_after:wN \c_nan_fp
       }
@@ -216,7 +216,7 @@
       { \cs_set:Npn \@@_division_by_zero_o:Nnw ##1##2##3; }
       {
         #1
-        \@@_error:nnfn { zero-div } {##2} { \fp_to_tl:n { ##3; } } { }
+        \@@_error:nnfn { fp-zero-div } {##2} { \fp_to_tl:n { ##3; } } { }
         \flag_raise:n { fp_division_by_zero }
         \exp_after:wN ##1
       }
@@ -224,7 +224,7 @@
       { \cs_set:Npn \@@_division_by_zero_o:NNww ##1##2##3; ##4; }
       {
         #1
-        \@@_error:nffn { zero-div-ii }
+        \@@_error:nffn { fp-zero-div-ii }
           { \fp_to_tl:n { ##3; } } { \fp_to_tl:n { ##4; } } {##2}
         \flag_raise:n { fp_division_by_zero }
         \exp_after:wN ##1
@@ -285,7 +285,7 @@
       {
         #1
         \@@_error:nffn
-          { flow \if_meaning:w 1 ##1 -to \fi: }
+          { fp-flow \if_meaning:w 1 ##1 -to \fi: }
           { \fp_to_tl:n { \s_@@ \@@_chk:w ##1##2##3; } }
           { \token_if_eq_meaning:NNF 0 ##2 { - } #4 }
           {#2}
@@ -337,15 +337,13 @@
 %
 % \subsection{Errors}
 %
-%^^A begin[todo]
 % \begin{macro}[int, EXP]{\@@_error:nnnn, \@@_error:nnfn, \@@_error:nffn}
 %    \begin{macrocode}
-\cs_new:Npn \@@_error:nnnn #1
-  { \__msg_kernel_expandable_error:nnnnn { kernel } { fp - #1 } }
+\cs_new:Npn \@@_error:nnnn
+  { \__msg_kernel_expandable_error:nnnnn { kernel } }
 \cs_generate_variant:Nn \@@_error:nnnn { nnf, nff }
 %    \end{macrocode}
 % \end{macro}
-% ^^A end[todo]
 %
 % \subsection{Messages}
 %
